# sqlglot-toolbox

./: .gitattributes  README.md  README.rst  __init__.py  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.github/workflows/: slow-checks.yml
doc/: conf.py  index.rst
exasol/sqlglot_toolbox/dialects/: exasol.py
test/: conftest.py
test/integration/: integration_smoke_test.py
test/unit/: test_exasol.py  unit_smoke_test.py
test/unit/utils/: validator.py
test/utils/: test_dialect.py
