[project]
name = "exasol-sqlglot-toolbox"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
description = "An extension and toolbox to the Exasol dialect in SQLglot"
authors = [
    {name = "Exasol AG", email = "opensource@exasol.com"},
]
readme = "README.rst"
license = "MIT"
keywords = ['exasol', 'sqlglot_toolbox']
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol" },
]

[poetry.urls]
repository = "https://github.com/exasol/sqlglot-toolbox"
homepage = "https://github.com/exasol/sqlglot-toolbox"

[tool.poetry.dependencies]
sqlglot = "28.5.0"
toolbox = "^1.11.0"
exasol-toolbox = "^4.0.0"

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "^4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# Tooling - marking what to show in the documentation
[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.sonar]
projectKey = "com.exasol:sqlglot-toolbox"
host.url = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/sqlglot_toolbox/version.py"
